# ai-engineering-buildcamp-codespace

./: README.md  pyproject.toml
01_Foundation/02_RAG/: openai.ipynb  rag.ipynb  unicorn_story.docx
01_Foundation/02_RAG/whoosh_index/: MAIN_snnm09w1c6bqr6pq.seg  _MAIN_1.toc
01_Foundation/structured_output/: structured_output.ipynb
03-agents/02-agent-basics/: basic.ipynb  qnaloop.ipynb  tool_call-loop.ipynb
03-agents/03-agents-framework/: beyond_rag.ipynb  pydantic_ai.ipynb  toyaikit.ipynb  toyaikit_tools.ipynb
Homework/: homework-2.ipynb  homework_1.ipynb
